[project]
name = "workflow_common"
version = "0.1.0"
description = "common code while dev-ing workflows"
authors = [{name = "Catherine"}]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "websockets>=13.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"workflow_common" = "src"}