[project]
name = "workflow_montecarlo"
version = "0.1.0"
description = "test workflow montecarlo"
authors = [{name = "Catherine"}]

readme = "README.md"
requires-python = ">=3.12"
dependencies = ["redis", "pydantic"]

[project.optional-dependencies]
dev = [ ]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"workflow_montecarlo" = "src"}